manifest/media/qbit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbit
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: qbit.defconsandbox.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:  
            name: qbittorrent-service
            port:
              number: 80
